Cabal, stack, dev container

--- a/fp-2024-main/dist-newstyle/packagedb/ghc-9.4.8/fp2024-0.1.0.0-inplace.conf
+++ b/fp-2024-main/dist-newstyle/packagedb/ghc-9.4.8/fp2024-0.1.0.0-inplace.conf
@@ -16,26 +16,22 @@ exposed:              True
 exposed-modules:      Lessons.Lesson01 Lib1
 hidden-modules:       Paths_fp2024
 import-dirs:
-    C:\Users\ginta\Desktop\fp_julius\fp-2024-main\dist-newstyle\build\x86_64-windows\ghc-9.4.8\fp2024-0.1.0.0\build
+    /workspaces/fp_julius/fp-2024-main/dist-newstyle/build/x86_64-linux/ghc-9.4.8/fp2024-0.1.0.0/build
 
 library-dirs:
-    C:\Users\ginta\Desktop\fp_julius\fp-2024-main\dist-newstyle\build\x86_64-windows\ghc-9.4.8\fp2024-0.1.0.0\build
-    C:\ghcup\msys64\mingw64\lib
+    /workspaces/fp_julius/fp-2024-main/dist-newstyle/build/x86_64-linux/ghc-9.4.8/fp2024-0.1.0.0/build
 
 library-dirs-static:
-    C:\Users\ginta\Desktop\fp_julius\fp-2024-main\dist-newstyle\build\x86_64-windows\ghc-9.4.8\fp2024-0.1.0.0\build
-    C:\ghcup\msys64\mingw64\lib
+    /workspaces/fp_julius/fp-2024-main/dist-newstyle/build/x86_64-linux/ghc-9.4.8/fp2024-0.1.0.0/build
 
 dynamic-library-dirs:
-    C:\Users\ginta\Desktop\fp_julius\fp-2024-main\dist-newstyle\build\x86_64-windows\ghc-9.4.8\fp2024-0.1.0.0\build
-    C:\ghcup\msys64\mingw64\lib
+    /workspaces/fp_julius/fp-2024-main/dist-newstyle/build/x86_64-linux/ghc-9.4.8/fp2024-0.1.0.0/build
 
-data-dir:             C:\Users\ginta\Desktop\fp_julius\fp-2024-main\.
+data-dir:             /workspaces/fp_julius/fp-2024-main/.
 hs-libraries:         HSfp2024-0.1.0.0-inplace
-include-dirs:         C:\ghcup\msys64\mingw64\include
 depends:              base-4.17.2.1
 haddock-interfaces:
-    C:\Users\ginta\Desktop\fp_julius\fp-2024-main\dist-newstyle\build\x86_64-windows\ghc-9.4.8\fp2024-0.1.0.0\doc\html\fp2024\fp2024.haddock
+    /workspaces/fp_julius/fp-2024-main/dist-newstyle/build/x86_64-linux/ghc-9.4.8/fp2024-0.1.0.0/doc/html/fp2024/fp2024.haddock
 
 haddock-html:
-    C:\Users\ginta\Desktop\fp_julius\fp-2024-main\dist-newstyle\build\x86_64-windows\ghc-9.4.8\fp2024-0.1.0.0\doc\html\fp2024
+    /workspaces/fp_julius/fp-2024-main/dist-newstyle/build/x86_64-linux/ghc-9.4.8/fp2024-0.1.0.0/doc/html/fp2024
