--- a/dist-newstyle/packagedb/ghc-9.4.8/fp2024-0.1.0.0-inplace.conf
+++ b/dist-newstyle/packagedb/ghc-9.4.8/fp2024-0.1.0.0-inplace.conf
@@ -16,22 +16,22 @@ exposed:              True
 exposed-modules:      Lessons.Lesson01 Lib1
 hidden-modules:       Paths_fp2024
 import-dirs:
-    /workspaces/fp_julius/fp-2024-main/dist-newstyle/build/x86_64-linux/ghc-9.4.8/fp2024-0.1.0.0/build
+    /workspaces/fp_julius/dist-newstyle/build/x86_64-linux/ghc-9.4.8/fp2024-0.1.0.0/build
 
 library-dirs:
-    /workspaces/fp_julius/fp-2024-main/dist-newstyle/build/x86_64-linux/ghc-9.4.8/fp2024-0.1.0.0/build
+    /workspaces/fp_julius/dist-newstyle/build/x86_64-linux/ghc-9.4.8/fp2024-0.1.0.0/build
 
 library-dirs-static:
-    /workspaces/fp_julius/fp-2024-main/dist-newstyle/build/x86_64-linux/ghc-9.4.8/fp2024-0.1.0.0/build
+    /workspaces/fp_julius/dist-newstyle/build/x86_64-linux/ghc-9.4.8/fp2024-0.1.0.0/build
 
 dynamic-library-dirs:
-    /workspaces/fp_julius/fp-2024-main/dist-newstyle/build/x86_64-linux/ghc-9.4.8/fp2024-0.1.0.0/build
+    /workspaces/fp_julius/dist-newstyle/build/x86_64-linux/ghc-9.4.8/fp2024-0.1.0.0/build
 
-data-dir:             /workspaces/fp_julius/fp-2024-main/.
+data-dir:             /workspaces/fp_julius/.
 hs-libraries:         HSfp2024-0.1.0.0-inplace
 depends:              base-4.17.2.1
 haddock-interfaces:
-    /workspaces/fp_julius/fp-2024-main/dist-newstyle/build/x86_64-linux/ghc-9.4.8/fp2024-0.1.0.0/doc/html/fp2024/fp2024.haddock
+    /workspaces/fp_julius/dist-newstyle/build/x86_64-linux/ghc-9.4.8/fp2024-0.1.0.0/doc/html/fp2024/fp2024.haddock
 
 haddock-html:
-    /workspaces/fp_julius/fp-2024-main/dist-newstyle/build/x86_64-linux/ghc-9.4.8/fp2024-0.1.0.0/doc/html/fp2024
+    /workspaces/fp_julius/dist-newstyle/build/x86_64-linux/ghc-9.4.8/fp2024-0.1.0.0/doc/html/fp2024
