--- a/fp2024.cabal
+++ b/fp2024.cabal
@@ -27,6 +27,7 @@ library
   exposed-modules:
       Lessons.Lesson01
       Lib1
+      Lib2
   other-modules:
       Paths_fp2024
   autogen-modules:
