--- a/package.yaml
+++ b/package.yaml
@@ -35,6 +35,10 @@ ghc-options:
 
 library:
   source-dirs: src
+  dependencies:
+  - random
+  - stm
+  - async
 
 executables:
   fp2024-one:
@@ -47,6 +51,28 @@ executables:
     dependencies:
     - fp2024
     - repline
+  fp2024-two:
+    main:                Main.hs
+    source-dirs:         app2
+    ghc-options:
+    - -threaded
+    - -rtsopts
+    - -with-rtsopts=-N
+    dependencies:
+    - fp2024
+    - repline
+    - mtl
+  fp2024-three:
+    main:                Main.hs
+    source-dirs:         app3
+    ghc-options:
+    - -threaded
+    - -rtsopts
+    - -with-rtsopts=-N
+    dependencies:
+    - fp2024
+    - repline
+    - mtl
 
 tests:
   fp2024-test:
@@ -60,3 +86,12 @@ tests:
     - fp2024
     - tasty
     - tasty-hunit
+  fp2024-doctest:
+    main:                Doctest.hs
+    source-dirs:         doctest
+    ghc-options:
+    - -threaded
+    - -rtsopts
+    - -with-rtsopts=-N
+    dependencies:
+    - doctest
