--- a/package.yaml
+++ b/package.yaml
@@ -73,6 +73,7 @@ executables:
     - fp2024
     - repline
     - mtl
+    - stm
 
 tests:
   fp2024-test:
@@ -86,6 +87,9 @@ tests:
     - fp2024
     - tasty
     - tasty-hunit
+    - tasty-quickcheck
+    - stm
+    - QuickCheck
   fp2024-doctest:
     main:                Doctest.hs
     source-dirs:         doctest
