--- a/fp2024.cabal
+++ b/fp2024.cabal
@@ -78,6 +78,7 @@ executable fp2024-three
     , fp2024
     , mtl
     , repline
+    , stm
   default-language: Haskell2010
 
 executable fp2024-two
@@ -122,8 +123,11 @@ test-suite fp2024-test
       test
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base >=4.7 && <5
+      QuickCheck
+    , base >=4.7 && <5
     , fp2024
+    , stm
     , tasty
     , tasty-hunit
+    , tasty-quickcheck
   default-language: Haskell2010
