--- a/fp2024.cabal
+++ b/fp2024.cabal
@@ -25,6 +25,7 @@ source-repository head
 
 library
   exposed-modules:
+      DSL
       Lessons.Lesson01
       Lessons.Lesson02
       Lessons.Lesson03
@@ -43,10 +44,53 @@ library
       src
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
-      async
+      QuickCheck
+    , async
     , base >=4.7 && <5
+    , free
     , random
     , stm
+    , strict
+    , transformers
+  default-language: Haskell2010
+
+executable fp2024-four-client
+  main-is: Main.hs
+  other-modules:
+      Paths_fp2024
+  autogen-modules:
+      Paths_fp2024
+  hs-source-dirs:
+      app4-client
+  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
+  build-depends:
+      base >=4.7 && <5
+    , bytestring
+    , fp2024
+    , free
+    , lens
+    , mtl
+    , repline
+    , string-conversions
+    , wreq
+  default-language: Haskell2010
+
+executable fp2024-four-server
+  main-is: Main.hs
+  other-modules:
+      Paths_fp2024
+  autogen-modules:
+      Paths_fp2024
+  hs-source-dirs:
+      app4-server
+  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
+  build-depends:
+      base >=4.7 && <5
+    , fp2024
+    , repline
+    , scotty
+    , stm
+    , string-conversions
   default-language: Haskell2010
 
 executable fp2024-one
